--- a/index.html
+++ b/index.html
@@ -16,7 +16,8 @@
       href="https://fonts.googleapis.com/css2?family=Barlow:wght@600&family=Fraunces:wght@700;900&display=swap"
       rel="stylesheet"
     />
-    <link rel="stylesheet" href="style.css" />
+    <link rel="stylesheet" href="./css/normalize.css" />
+    <link rel="stylesheet" href="./css/style.css" />
     <title>Frontend Mentor | Sunnyside agency landing page</title>
   </head>
   <body>
