--- a/index.html
+++ b/index.html
@@ -21,201 +21,208 @@
     <title>Frontend Mentor | Sunnyside agency landing page</title>
   </head>
   <body>
-    <div class="navbar">
-      <img src="./images/logo.svg" alt="SunnySide logo" class="navbar__logo" />
-      <nav class="navbar__nav">
-        <ul>
-          <li><a href="#about">About</a></li>
-          <li><a href="#services">Services</a></li>
-          <li><a href="#projects">Projects</a></li>
-          <li><a href="#contact">Contact</a></li>
-        </ul>
-      </nav>
-      <button class="button--burger btn" aria-label="Burger menu">
-        <img src="./images/icon-hamburger.svg" alt="" />
-      </button>
-    </div>
-    <header class="header">
-      <h1 class="header__text">We are creatives</h1>
-      <button class="btn btn--scrollDown" aria-label="scroll-down">
-        <img src="./images/icon-arrow-down.svg" alt="" />
-      </button>
-    </header>
-
-    <main id="about" class="article article--about">
-      <h2 class="article__title">Transform your brand</h2>
-      <p class="article__article-contnet">
-        We are a full-service creative agency specializing in helping brands
-        grow fast. Engage your clients through compelling visuals that do most
-        of the marketing for you.
-      </p>
-      <button class="btn btn--learn-more">Learn more</button>
-    </main>
-    <div class="article-img">
-      <picture>
+    <div class="container">
+      <header class="header">
+        <nav class="navbar nav">
+          <a href="#" aria-label="home">
+            <img
+              src="./images/logo.svg"
+              alt="SunnySide logo"
+              class="navbar__logo"
+            />
+          </a>
+          <ul class="nav header-nav">
+            <li><a href="#about">About</a></li>
+            <li><a href="#services">Services</a></li>
+            <li><a href="#projects">Projects</a></li>
+            <li><a href="#contact">Contact</a></li>
+          </ul>
+          <button class="button--burger btn" aria-label="Burger menu">
+            <img src="./images/icon-hamburger.svg" alt="" />
+          </button>
+        </nav>
+        <div class="header__hero">
+          <h1 class="header__text">We are creatives</h1>
+          <button class="btn btn--scroll-down" aria-label="scroll-down">
+            <img src="./images/icon-arrow-down.svg" alt="" />
+          </button>
+        </div>
+      </header>
+      <div class="article-img">
+        <picture>
+          <source
+            media="(min-width:650px)"
+            srcset="./images/desktop/image-transform.jpg"
+          />
+          <img src="./images/mobile/image-transform.jpg" alt="" />
+        </picture>
+      </div>
+      <main id="about" class="article article--about">
+        <h2 class="article__title">Transform your brand</h2>
+        <p class="article__article-contnet">
+          We are a full-service creative agency specializing in helping brands
+          grow fast. Engage your clients through compelling visuals that do most
+          of the marketing for you.
+        </p>
+        <button class="btn btn--learn-more">Learn more</button>
+      </main>
+      <div class="article-img">
+        <picture>
+          <source
+            media="(min-width:650px)"
+            srcset="./images/desktop/image-stand-out.jpg"
+          />
+          <img src="./images/mobile/image-stand-out.jpg" alt="" />
+        </picture>
+      </div>
+      <article id="about" class="article article--about">
+        <h2 class="article__title">Stand out to the right audience</h2>
+        <p class="article__article-contnet">
+          Using a collaborative formula of designers, researchers,
+          photographers, videographers, and copywriters, we’ll build and extend
+          your brand in digital places.
+        </p>
+        <button class="btn btn--learn-more">Learn more</button>
+      </article>
+      <article class="article article--about article--background">
+        <h2 class="article__title">Graphic design</h2>
+        <p class="article__article-contnet">
+          Great design makes you memorable. We deliver artwork that underscores
+          your brand message and captures potential clients’ attention.
+        </p>
+        <button class="btn btn--learn-more">Learn more</button>
+      </article>
+      <article id="about" class="article article--about article--background">
+        <h2 class="article__title">Photography</h2>
+        <p class="article__article-contnet">
+          Increase your credibility by getting the most stunning, high-quality
+          photos that improve your business image.
+        </p>
+        <button class="btn btn--learn-more">Learn more</button>
+      </article>
+      <section class="testimonials">
+        <h2 class="testimonials__header">Client testimonials</h2>
+        <div class="testinonial-card card">
+          <img
+            src="./images/image-emily.jpg"
+            alt="Emily R."
+            class="testimonial__card__img"
+          />
+          <p class="testimonial-card__text">
+            We put our trust in Sunnyside and they delivered, making sure our
+            needs were met and deadlines were always hit.
+          </p>
+          <h3 class="testimonial-card__client-name">Emily R.</h3>
+          <p class="testimonial-card--cilent--info">Marketing Director</p>
+        </div>
+        <div class="testinonial-card card">
+          <img
+            src="./images/image-thomas.jpg"
+            alt="Thomas S."
+            class="testimonial__card__img"
+          />
+          <p class="testimonial-card__text">
+            Sunnyside’s enthusiasm coupled with their keen interest in our
+            brand’s success made it a satisfying and enjoyable experience.
+          </p>
+          <h3 class="testimonial-card__client-name">Thomas S.</h3>
+          <p class="testimonial-card--cilent--info">Chief Operating Officer</p>
+        </div>
+        <div class="testinonial-card card">
+          <img
+            src="./images/image-jennie.jpg"
+            alt="Jennie F."
+            class="testimonial__card__img"
+          />
+          <p class="testimonial-card__text">
+            Incredible end result! Our sales increased over 400% when we worked
+            with Sunnyside. Highly recommended!
+          </p>
+          <h3 class="testimonial-card__client-name">Jennie F.</h3>
+          <p class="testimonial-card--cilent--info">Business Owner</p>
+        </div>
+      </section>
+      <picture class="galery-img galery-img--1">
         <source
           media="(min-width:650px)"
-          srcset="./images/desktop/image-transform.jpg"
+          srcset="./images/desktop/image-gallery-milkbottles.jpg"
         />
-        <img src="./images/mobile/image-transform.jpg" alt="" />
+        <img
+          src="./images/mobile/image-gallery-milkbottles.jpg"
+          alt="milkbottles"
+        />
       </picture>
-    </div>
-    <article id="about" class="article article--about">
-      <h2 class="article__title">Stand out to the right audience</h2>
-      <p class="article__article-contnet">
-        Using a collaborative formula of designers, researchers, photographers,
-        videographers, and copywriters, we’ll build and extend your brand in
-        digital places.
-      </p>
-      <button class="btn btn--learn-more">Learn more</button>
-    </article>
-    <div class="article-img">
-      <picture>
+      <picture class="galery-img galery-img--2">
         <source
           media="(min-width:650px)"
-          srcset="./images/desktop/image-stand-out.jpg"
+          srcset="./images/desktop/image-gallery-orange.jpg"
         />
-        <img src="./images/mobile/image-stand-out.jpg" alt="" />
+        <img src="./images/mobile/image-gallery-orange.jpg" alt="orange" />
       </picture>
-    </div>
-    <article class="article article--about article--background">
-      <h2 class="article__title">Graphic design</h2>
-      <p class="article__article-contnet">
-        Great design makes you memorable. We deliver artwork that underscores
-        your brand message and captures potential clients’ attention.
-      </p>
-      <button class="btn btn--learn-more">Learn more</button>
-    </article>
-    <article id="about" class="article article--about article--background">
-      <h2 class="article__title">Photography</h2>
-      <p class="article__article-contnet">
-        Increase your credibility by getting the most stunning, high-quality
-        photos that improve your business image.
-      </p>
-      <button class="btn btn--learn-more">Learn more</button>
-    </article>
-    <section class="testimonials">
-      <h2 class="testimonials__header">Client testimonials</h2>
-      <div class="testinonial-card card">
-        <img
-          src="./images/image-emily.jpg"
-          alt="Emily R."
-          class="testimonial__card__img"
+      <picture class="galery-img galery-img--3">
+        <source
+          media="(min-width:650px)"
+          srcset="./images/desktop/image-gallery-cone.jpg"
         />
-        <p class="testimonial-card__text">
-          We put our trust in Sunnyside and they delivered, making sure our
-          needs were met and deadlines were always hit.
-        </p>
-        <p class="testimonial-card__client-name">Emily R.</p>
-        <p class="testimonial-card--cilent--info">Marketing Director</p>
-      </div>
-      <div class="testinonial-card card">
-        <img
-          src="./images/image-thomas.jpg"
-          alt="Thomas S."
-          class="testimonial__card__img"
+        <img src="./images/mobile/image-gallery-cone.jpg" alt="cone" />
+      </picture>
+      <picture class="galery-img galery-img--4">
+        <source
+          media="(min-width:650px)"
+          srcset="./images/desktop/image-gallery-sugarcubes.jpg"
         />
-        <p class="testimonial-card__text">
-          Sunnyside’s enthusiasm coupled with their keen interest in our brand’s
-          success made it a satisfying and enjoyable experience.
-        </p>
-        <p class="testimonial-card__client-name">Thomas S.</p>
-        <p class="testimonial-card--cilent--info">Chief Operating Officer</p>
-      </div>
-      <div class="testinonial-card card">
         <img
-          src="./images/image-jennie.jpg"
-          alt="Jennie F."
-          class="testimonial__card__img"
+          src="./images/mobile/image-gallery-sugar-cubes.jpg"
+          alt="sugarcubes"
         />
-        <p class="testimonial-card__text">
-          Incredible end result! Our sales increased over 400% when we worked
-          with Sunnyside. Highly recommended!
-        </p>
-        <p class="testimonial-card__client-name">Jennie F.</p>
-        <p class="testimonial-card--cilent--info">Business Owner</p>
-      </div>
-    </section>
-    <picture class="galery-img galery-img--1">
-      <source
-        media="(min-width:650px)"
-        srcset="./images/desktop/image-gallery-milkbottles.jpg"
-      />
-      <img
-        src="./images/mobile/image-gallery-milkbottles.jpg"
-        alt="milkbottles"
-      />
-    </picture>
-    <picture class="galery-img galery-img--2">
-      <source
-        media="(min-width:650px)"
-        srcset="./images/desktop/image-gallery-orange.jpg"
-      />
-      <img src="./images/mobile/image-gallery-orange.jpg" alt="orange" />
-    </picture>
-    <picture class="galery-img galery-img--3">
-      <source
-        media="(min-width:650px)"
-        srcset="./images/desktop/image-gallery-cone.jpg"
-      />
-      <img src="./images/mobile/image-gallery-cone.jpg" alt="cone" />
-    </picture>
-    <picture class="galery-img galery-img--4">
-      <source
-        media="(min-width:650px)"
-        srcset="./images/desktop/image-gallery-sugarcubes.jpg"
-      />
-      <img
-        src="./images/mobile/image-gallery-sugar-cubes.jpg"
-        alt="sugarcubes"
-      />
-    </picture>
+      </picture>
 
-    <footer class="footer">
-      <nav class="nav footer__nav">
-        <ul>
-          <li><a href="#">About</a></li>
-          <li><a href="">Services</a></li>
-          <li><a href="">Projects</a></li>
+      <footer class="footer">
+        <nav class="nav footer__nav">
+          <ul>
+            <li><a href="#">About</a></li>
+            <li><a href="">Services</a></li>
+            <li><a href="">Projects</a></li>
+          </ul>
+        </nav>
+        <ul class="nav footer__social">
+          <li>
+            <a href="https://facebook.com"
+              ><img src="./images/icon-facebook.svg" alt="facebook"
+            /></a>
+          </li>
+          <li>
+            <a href="https://instagram.com"
+              ><img
+                src="./images/icon-instagram.svg"
+                alt="instagram"
+                class="footer__icon"
+            /></a>
+          </li>
+          <li>
+            <a href="https://twitter.com"
+              ><img
+                src="./images/icon-twitter.svg"
+                alt="twitter"
+                class="footer__icon"
+            /></a>
+          </li>
+          <li>
+            <a href="https://pinterest.com"
+              ><img
+                src="./images/icon-pinterest.svg"
+                alt="pinterest"
+                class="footer__icon"
+            /></a>
+          </li>
         </ul>
-      </nav>
-      <ul class="footer__social">
-        <li>
-          <a href="https://facebook.com"
-            ><img src="./images/icon-facebook.svg" alt="facebook"
-          /></a>
-        </li>
-        <li>
-          <a href="https://instagram.com"
-            ><img
-              src="./images/icon-instagram.svg"
-              alt="instagram"
-              class="footer__icon"
-          /></a>
-        </li>
-        <li>
-          <a href="https://twitter.com"
-            ><img
-              src="./images/icon-twitter.svg"
-              alt="twitter"
-              class="footer__icon"
-          /></a>
-        </li>
-        <li>
-          <a href="https://pinterest.com"
-            ><img
-              src="./images/icon-pinterest.svg"
-              alt="pinterest"
-              class="footer__icon"
-          /></a>
-        </li>
-      </ul>
-      <div class="attribution">
-        Challenge by
-        <a href="https://www.frontendmentor.io?ref=challenge" target="_blank"
-          >Frontend Mentor</a
-        >. Coded by <a href="#">Aldona Tomzik</a>.
-      </div>
-    </footer>
+        <div class="attribution">
+          Challenge by
+          <a href="https://www.frontendmentor.io?ref=challenge" target="_blank"
+            >Frontend Mentor</a
+          >. Coded by <a href="#">Aldona Tomzik</a>.
+        </div>
+      </footer>
+    </div>
   </body>
 </html>
