Add style for article section

--- a/index.html
+++ b/index.html
@@ -59,12 +59,14 @@
       </div>
       <main id="about" class="article article--about">
         <h2 class="article__title">Transform your brand</h2>
-        <p class="article__article-contnet">
+        <p class="article__text">
           We are a full-service creative agency specializing in helping brands
           grow fast. Engage your clients through compelling visuals that do most
           of the marketing for you.
         </p>
-        <button class="btn btn--learn-more">Learn more</button>
+        <button class="btn btn__learn-more btn__learn-more--orange">
+          Learn more
+        </button>
       </main>
       <div class="article-img">
         <picture>
@@ -77,28 +79,28 @@
       </div>
       <article id="about" class="article article--about">
         <h2 class="article__title">Stand out to the right audience</h2>
-        <p class="article__article-contnet">
+        <p class="article__text">
           Using a collaborative formula of designers, researchers,
           photographers, videographers, and copywriters, we’ll build and extend
           your brand in digital places.
         </p>
-        <button class="btn btn--learn-more">Learn more</button>
+        <button class="btn btn__learn-more btn__learn-more--pink">
+          Learn more
+        </button>
       </article>
       <article class="article article--about article--background">
         <h2 class="article__title">Graphic design</h2>
-        <p class="article__article-contnet">
+        <p class="article__text">
           Great design makes you memorable. We deliver artwork that underscores
           your brand message and captures potential clients’ attention.
         </p>
-        <button class="btn btn--learn-more">Learn more</button>
       </article>
       <article id="about" class="article article--about article--background">
         <h2 class="article__title">Photography</h2>
-        <p class="article__article-contnet">
+        <p class="article__text">
           Increase your credibility by getting the most stunning, high-quality
           photos that improve your business image.
         </p>
-        <button class="btn btn--learn-more">Learn more</button>
       </article>
       <section class="testimonials">
         <h2 class="testimonials__header">Client testimonials</h2>
