add styling to articles with background

--- a/index.html
+++ b/index.html
@@ -88,16 +88,16 @@
           Learn more
         </button>
       </article>
-      <article class="article article--about article--background">
-        <h2 class="article__title">Graphic design</h2>
-        <p class="article__text">
+      <article class="article--design article-background">
+        <h2 class="article-background__title">Graphic Design</h2>
+        <p class="article-background__text">
           Great design makes you memorable. We deliver artwork that underscores
           your brand message and captures potential clients’ attention.
         </p>
       </article>
-      <article id="about" class="article article--about article--background">
-        <h2 class="article__title">Photography</h2>
-        <p class="article__text">
+      <article id="about" class="article--photography article-background">
+        <h2 class="article-background__title">Photography</h2>
+        <p class="article-background__text">
           Increase your credibility by getting the most stunning, high-quality
           photos that improve your business image.
         </p>
