Added styling for testimonials section

--- a/index.html
+++ b/index.html
@@ -104,11 +104,11 @@
       </article>
       <section class="testimonials">
         <h2 class="testimonials__header">Client testimonials</h2>
-        <div class="testinonial-card card">
+        <div class="testimonial-card card">
           <img
             src="./images/image-emily.jpg"
             alt="Emily R."
-            class="testimonial__card__img"
+            class="testimonial-card__img"
           />
           <p class="testimonial-card__text">
             We put our trust in Sunnyside and they delivered, making sure our
@@ -117,11 +117,11 @@
           <h3 class="testimonial-card__client-name">Emily R.</h3>
           <p class="testimonial-card--cilent--info">Marketing Director</p>
         </div>
-        <div class="testinonial-card card">
+        <div class="testimonial-card card">
           <img
             src="./images/image-thomas.jpg"
             alt="Thomas S."
-            class="testimonial__card__img"
+            class="testimonial-card__img"
           />
           <p class="testimonial-card__text">
             Sunnyside’s enthusiasm coupled with their keen interest in our
@@ -130,11 +130,11 @@
           <h3 class="testimonial-card__client-name">Thomas S.</h3>
           <p class="testimonial-card--cilent--info">Chief Operating Officer</p>
         </div>
-        <div class="testinonial-card card">
+        <div class="testimonial-card card">
           <img
             src="./images/image-jennie.jpg"
             alt="Jennie F."
-            class="testimonial__card__img"
+            class="testimonial-card__img"
           />
           <p class="testimonial-card__text">
             Incredible end result! Our sales increased over 400% when we worked
