add footer logo and footer styling

--- a/index.html
+++ b/index.html
@@ -180,8 +180,13 @@
       </picture>
 
       <footer class="footer">
-        <nav class="nav footer__nav">
-          <ul>
+        <img
+          src="./images/logo-footer.svg"
+          alt="sunnyside logo"
+          class="footer__logo"
+        />
+        <nav class="footer__nav">
+          <ul class="nav">
             <li><a href="#">About</a></li>
             <li><a href="">Services</a></li>
             <li><a href="">Projects</a></li>
@@ -190,12 +195,16 @@
         <ul class="nav footer__social">
           <li>
             <a href="https://facebook.com"
-              ><img src="./images/icon-facebook.svg" alt="facebook"
+              ><img
+                class="footer__social-logo"
+                src="./images/icon-facebook.svg"
+                alt="facebook"
             /></a>
           </li>
           <li>
             <a href="https://instagram.com"
               ><img
+                class="footer__social-logo"
                 src="./images/icon-instagram.svg"
                 alt="instagram"
                 class="footer__icon"
@@ -204,6 +213,7 @@
           <li>
             <a href="https://twitter.com"
               ><img
+                class="footer__social-logo"
                 src="./images/icon-twitter.svg"
                 alt="twitter"
                 class="footer__icon"
@@ -212,6 +222,7 @@
           <li>
             <a href="https://pinterest.com"
               ><img
+                class="footer__social-logo"
                 src="./images/icon-pinterest.svg"
                 alt="pinterest"
                 class="footer__icon"
