changed font color

--- a/index.html
+++ b/index.html
@@ -89,15 +89,19 @@
         </button>
       </article>
       <article class="article--design article-background">
-        <h2 class="article-background__title">Graphic Design</h2>
-        <p class="article-background__text">
+        <h2 class="article-background__title article-background__title-green">
+          Graphic Design
+        </h2>
+        <p class="article-background__text article-background__text--green">
           Great design makes you memorable. We deliver artwork that underscores
           your brand message and captures potential clients’ attention.
         </p>
       </article>
       <article id="about" class="article--photography article-background">
-        <h2 class="article-background__title">Photography</h2>
-        <p class="article-background__text">
+        <h2 class="article-background__title article-background__title--blue">
+          Photography
+        </h2>
+        <p class="article-background__text article-background__text--blue">
           Increase your credibility by getting the most stunning, high-quality
           photos that improve your business image.
         </p>
@@ -115,7 +119,7 @@
             needs were met and deadlines were always hit.
           </p>
           <h3 class="testimonial-card__client-name">Emily R.</h3>
-          <p class="testimonial-card--cilent--info">Marketing Director</p>
+          <p class="testimonial-card__cilent-info">Marketing Director</p>
         </div>
         <div class="testimonial-card card">
           <img
@@ -128,7 +132,7 @@
             brand’s success made it a satisfying and enjoyable experience.
           </p>
           <h3 class="testimonial-card__client-name">Thomas S.</h3>
-          <p class="testimonial-card--cilent--info">Chief Operating Officer</p>
+          <p class="testimonial-card__cilent-info">Chief Operating Officer</p>
         </div>
         <div class="testimonial-card card">
           <img
@@ -141,7 +145,7 @@
             with Sunnyside. Highly recommended!
           </p>
           <h3 class="testimonial-card__client-name">Jennie F.</h3>
-          <p class="testimonial-card--cilent--info">Business Owner</p>
+          <p class="testimonial-card__cilent-info">Business Owner</p>
         </div>
       </section>
       <picture class="galery-img galery-img--1">
