changed units to rem

--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
           </ul>
           <button
             id="btn--burger"
-            class="button--burger btn"
+            class="btn--burger btn"
             aria-label="Burger menu"
           >
             <img src="./images/icon-hamburger.svg" alt="" />
