--- a/index.html
+++ b/index.html
@@ -65,7 +65,7 @@
         </div>
       </header>
 
-      <picture class="article-img article-about-img">
+      <picture class="article-img article-about-img animatedOnScroll fadeIn">
         <source
           media="(min-width:768px)"
           srcset="./images/desktop/image-transform.jpg"
@@ -74,35 +74,55 @@
       </picture>
 
       <main id="about" class="article article-about">
-        <h2 class="article__title">Transform your brand</h2>
-        <p class="article__text">
+        <h2 class="article__title animatedOnScroll fadeInDown">
+          Transform your brand
+        </h2>
+        <p class="article__text animatedOnScroll fadeInDown" data-delay=".5s">
           We are a full-service creative agency specializing in helping brands
           grow fast. Engage your clients through compelling visuals that do most
           of the marketing for you.
         </p>
-        <button class="btn btn__learn-more btn__learn-more--orange">
+        <button
+          class="
+            btn btn__learn-more btn__learn-more--orange
+            animatedOnScroll
+            fadeIn
+          "
+          data-delay="1s"
+        >
           Learn more
         </button>
       </main>
-      <picture class="article-img article-audience-img">
+      <picture class="article-img article-audience-img animatedOnScroll fadeIn">
         <source
           media="(min-width:768px)"
           srcset="./images/desktop/image-stand-out.jpg"
         />
         <img src="./images/mobile/image-stand-out.jpg" alt="" />
       </picture>
-      <article id="about" class="article article-audience">
-        <h2 class="article__title">Stand out to the right audience</h2>
-        <p class="article__text">
+      <article class="article article-audience">
+        <h2 class="article__title animatedOnScroll fadeInDown">
+          Stand out to the right audience
+        </h2>
+        <p class="article__text animatedOnScroll fadeInDown" data-delay=".5s">
           Using a collaborative formula of designers, researchers,
           photographers, videographers, and copywriters, we’ll build and extend
           your brand in digital places.
         </p>
-        <button class="btn btn__learn-more btn__learn-more--pink">
+        <button
+          class="
+            btn btn__learn-more btn__learn-more--pink
+            animatedOnScroll
+            fadeIn
+          "
+          data-delay="1s"
+        >
           Learn more
         </button>
       </article>
-      <article class="article--design article-background">
+      <article
+        class="article--design article-background animatedOnScroll fadeIn"
+      >
         <h2 class="article-background__title article-background__title--green">
           Graphic Design
         </h2>
@@ -111,7 +131,11 @@
           your brand message and captures potential clients’ attention.
         </p>
       </article>
-      <article id="about" class="article--photography article-background">
+      <article
+        id="about"
+        class="article--photography article-background animatedOnScroll fadeIn"
+        data-delay=".5s"
+      >
         <h2 class="article-background__title article-background__title--blue">
           Photography
         </h2>
@@ -123,7 +147,7 @@
       <section class="testimonials">
         <h2 class="testimonials__header">Client testimonials</h2>
         <div class="testimonial__cards">
-          <div class="testimonial-card card">
+          <div class="testimonial-card card animatedOnScroll fadeInDown">
             <img
               src="./images/image-emily.jpg"
               alt="Emily R."
@@ -136,7 +160,10 @@
             <h3 class="testimonial-card__client-name">Emily R.</h3>
             <p class="testimonial-card__cilent-info">Marketing Director</p>
           </div>
-          <div class="testimonial-card card">
+          <div
+            class="testimonial-card card animatedOnScroll fadeInDown"
+            data-delay="0.5s"
+          >
             <img
               src="./images/image-thomas.jpg"
               alt="Thomas S."
@@ -149,7 +176,10 @@
             <h3 class="testimonial-card__client-name">Thomas S.</h3>
             <p class="testimonial-card__cilent-info">Chief Operating Officer</p>
           </div>
-          <div class="testimonial-card card">
+          <div
+            class="testimonial-card card animatedOnScroll fadeInDown"
+            data-delay="1s"
+          >
             <img
               src="./images/image-jennie.jpg"
               alt="Jennie F."
@@ -164,7 +194,7 @@
           </div>
         </div>
       </section>
-      <picture class="galery-img galery-img--1">
+      <picture class="galery-img galery-img--1 animatedOnScroll fadeIn">
         <source
           media="(min-width:768px)"
           srcset="./images/desktop/image-gallery-milkbottles.jpg"
@@ -174,21 +204,30 @@
           alt="milkbottles"
         />
       </picture>
-      <picture class="galery-img galery-img--2">
+      <picture
+        class="galery-img galery-img--2 animatedOnScroll fadeIn"
+        data-delay="0.5s"
+      >
         <source
           media="(min-width:768px)"
           srcset="./images/desktop/image-gallery-orange.jpg"
         />
         <img src="./images/mobile/image-gallery-orange.jpg" alt="orange" />
       </picture>
-      <picture class="galery-img galery-img--3">
+      <picture
+        class="galery-img galery-img--3 animatedOnScroll fadeIn"
+        data-delay="1s"
+      >
         <source
           media="(min-width:768px)"
           srcset="./images/desktop/image-gallery-cone.jpg"
         />
         <img src="./images/mobile/image-gallery-cone.jpg" alt="cone" />
       </picture>
-      <picture class="galery-img galery-img--4">
+      <picture
+        class="galery-img galery-img--4 animatedOnScroll fadeIn"
+        data-delay="1.5s"
+      >
         <source
           media="(min-width:768px)"
           srcset="./images/desktop/image-gallery-sugarcubes.jpg"
@@ -258,5 +297,6 @@
       </footer>
     </div>
     <script src="./js/burger-menu.js"></script>
+    <script src="./js/scroll-animation.js"></script>
   </body>
 </html>
